# Maidspace

./: README.md  package-lock.json  package.json  server.js
data/: add-file-knowledge.json
docs/: ARCHITECTURE.md  MAIDSPACE_RESEARCH.md  PERFORMANCE.md  RELEASE_CHECKLIST.md
public/: app.js  index.html  styles.css
scripts/: maidspace-build.ps1  setup-maidspace.ps1  with-vsdev.cmd
src/: report.js
src-core/add-core/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/add/: analyzer.js  fileKnowledge.js
src/alc/: operationManifest.js  preferences.js  state.js
src/are/: planner.js
src/scan/: fastInventory.js
tests/: add.test.js
