[package]
name = "maidspace"
version = "0.2.0"
description = "Interface local do MaidSpace"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
trash = "5"
add-core = { path = "../src-core/add-core" }

[features]
custom-protocol = ["tauri/custom-protocol"]
